--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -22,13 +22,23 @@
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="55dp"
         android:paddingVertical="15dp"
-        android:gravity="center_vertical"
+        android:gravity="center_horizontal"
+        android:orientation="horizontal"
         app:layout_constraintBottom_toTopOf="@+id/recyclerView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
+
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center_horizontal"
+            android:visibility="@{isSearchClick?View.VISIBLE:View.GONE}">
+
 
 
         <ImageView
@@ -36,7 +46,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="15dp"
-            android:visibility="@{isSearchClick?View.VISIBLE:View.GONE}"
             app:srcCompat="@drawable/ic_baseline_arrow_back_24" />
 
         <EditText
@@ -46,12 +55,29 @@
             android:minHeight="30dp"
             android:layout_marginLeft="15dp"
             android:layout_weight="1"
-            android:ems="10"
-            android:visibility="@{isSearchClick?View.VISIBLE:View.GONE}"
+
             android:hint="Search"
             android:background="@null"
             android:inputType="textPersonName"
             android:text="" />
+
+            <ImageView
+                android:id="@+id/arrowUp"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginRight="15dp"
+                app:srcCompat="@drawable/ic_baseline_keyboard_arrow_up_24" />
+            <ImageView
+                android:id="@+id/arrowDown"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+
+                android:layout_marginRight="15dp"
+                app:srcCompat="@drawable/ic_baseline_keyboard_arrow_down_24" />
+
+        </LinearLayout>
+
+
 
         <TextView
             android:id="@+id/textView2"
