--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -26,7 +26,7 @@
         android:paddingVertical="15dp"
         android:gravity="center_horizontal"
         android:orientation="horizontal"
-        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
+        app:layout_constraintBottom_toTopOf="@+id/recyclerViewLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -52,28 +52,16 @@
             android:id="@+id/SearchEditText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:minHeight="30dp"
+            android:minHeight="40dp"
             android:layout_marginLeft="15dp"
             android:layout_weight="1"
 
             android:hint="Search"
             android:background="@null"
-            android:inputType="textPersonName"
+            android:inputType="text"
             android:text="" />
 
-            <ImageView
-                android:id="@+id/arrowUp"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_marginRight="15dp"
-                app:srcCompat="@drawable/ic_baseline_keyboard_arrow_up_24" />
-            <ImageView
-                android:id="@+id/arrowDown"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
 
-                android:layout_marginRight="15dp"
-                app:srcCompat="@drawable/ic_baseline_keyboard_arrow_down_24" />
 
         </LinearLayout>
 
@@ -109,28 +97,123 @@
         android:background="?android:attr/listDivider"
         app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
+        android:visibility="@{isSearchClick?View.GONE:View.VISIBLE}"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
+
+    <LinearLayout
+        android:id="@+id/recyclerViewLayout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
-     " />
-
-
-
-    <View
-        android:id="@+id/divider2"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout">
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="?android:attr/listDivider"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        />
+
+
+        <View
+            android:id="@+id/divider2"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="?android:attr/listDivider"
+             />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center_horizontal"
+            android:visibility="@{isSearchClick?View.VISIBLE:View.GONE}"
+            android:paddingVertical="2dp"
+            android:paddingHorizontal="5dp"
+            >
+
+
+
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/imageView3"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                app:cardCornerRadius="20dp"
+                app:cardElevation="0dp"
+                android:foreground="?attr/selectableItemBackground"
+                android:clickable="true">
+
+                <ImageView
+
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    app:srcCompat="@drawable/ic_baseline_search_24" />
+
+            </androidx.cardview.widget.CardView>
+
+
+
+            <View
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:layout_weight="1"/>
+            <androidx.cardview.widget.CardView
+                android:id="@+id/arrowUp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                app:cardCornerRadius="20dp"
+                app:cardElevation="0dp"
+                android:foreground="?attr/selectableItemBackground"
+                android:clickable="true">
+                <ImageView
+
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+
+                    android:layout_gravity="center"
+                    app:srcCompat="@drawable/ic_baseline_keyboard_arrow_up_24" />
+
+            </androidx.cardview.widget.CardView>
+            <androidx.cardview.widget.CardView
+                android:id="@+id/arrowDown"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                app:cardCornerRadius="20dp"
+                app:cardElevation="0dp"
+                android:foreground="?attr/selectableItemBackground"
+
+                android:clickable="true">
+                <ImageView
+
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_gravity="center"
+
+
+                    app:srcCompat="@drawable/ic_baseline_keyboard_arrow_down_24" />
+
+            </androidx.cardview.widget.CardView>
+
+
+
+        </LinearLayout>
+    </LinearLayout>
+
+
+
+
+<!--    <View-->
+<!--        android:id="@+id/divider2"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="1dp"-->
+<!--        android:background="?android:attr/listDivider"-->
+<!--        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent" />-->
 
     <LinearLayout
         android:id="@+id/linearLayout2"
@@ -140,6 +223,7 @@
         android:gravity="center_vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        android:visibility="@{isSearchClick?View.GONE:View.VISIBLE}"
         app:layout_constraintStart_toStartOf="parent">
 
 
@@ -200,20 +284,21 @@
 
         </androidx.cardview.widget.CardView>
     </LinearLayout>
+
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
         android:layout_width="60dp"
         android:layout_height="60dp"
-       android:layout_marginBottom="15dp"
+        android:layout_marginBottom="15dp"
         android:clickable="true"
-
         android:foreground="?attr/selectableItemBackground"
+        android:visibility="@{isSearchClick?View.GONE:View.VISIBLE}"
         app:cardBackgroundColor="@color/teal_200"
         app:cardCornerRadius="30dp"
         app:cardElevation="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/divider2">
+        app:layout_constraintStart_toStartOf="@+id/linearLayout2">
 
 
         <TextView
@@ -226,5 +311,7 @@
             android:textColor="@color/white"
             android:textSize="30sp" />
     </androidx.cardview.widget.CardView>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
