--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -26,6 +26,7 @@
         android:paddingVertical="15dp"
         android:gravity="center_horizontal"
         android:orientation="horizontal"
+        android:layout_marginRight="10dp"
         app:layout_constraintBottom_toTopOf="@+id/recyclerViewLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -61,6 +62,14 @@
             android:inputType="text"
             android:text="" />
 
+
+            <ImageView
+                android:id="@+id/xButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+
+                android:src="@drawable/ic_baseline_close_24"/>
 
 
         </LinearLayout>
